--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
         "express": "^4.16.4",
+        "multer": "^1.4.1",
         "mysql": "^2.17.1",
         "node-mysql": "^0.4.2"
     },
     "devDependecies": {
         "concurrently": "^4.0.1"
-    },
-    "proxy": "http://localhost:5000"
+    }
 }
